# palautusrepositorio

./: .gitignore
osa2/nhl-statistics-1/src/: index.py  statistics_service.py
osa2/nhl-statistics-1/src/tests/: staticstics_service_test.py
osa2/poetry-web/: pyproject.toml
osa2/project-reader/src/: project.py  project_reader.py
osa3/hello-robot/: log.html  output.xml  report.html
osa3/hello-robot/src/: CounterLibrary.py
osa3/login-robot/: log.html  output.xml  report.html
osa3/login-robot/src/services/: user_service.py
osa3/login-robot/src/tests/: login.robot  register.robot
osa4/: retro.md
osa4/maksukortti-mock/src/: kassapaate.py
osa4/maksukortti-mock/src/tests/: kassapaate_test.py
