[project]
name = "poetry-testi"
version = "0.1.0"
description = ""
authors = [
    {name = "Vilma Vartiainen",email = "vilma.vartiainen@icloud.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
